# leaderless-blockchain-consensus

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/consensus/: BinConsensus.cpp  BinConsensus.hpp  DBFT.cpp  DBFT.hpp  ReliableBroadcast.cpp  ReliableBroadcast.hpp  metrics.hpp
src/core/: chain.hpp  message.hpp  transaction.cpp  transaction.hpp
src/network/: channel.hpp  netmanager.hpp  network.cpp  network.hpp
src/node/: node.cpp  node.hpp  role.hpp
src/simulation/: simulation.cpp  simulation.hpp  structs.hpp
tests/: CMakeLists.txt  run_simulation.cpp  test_BinCon.cpp  test_DBFT.cpp  test_RB.cpp
